lint cleanup